welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: missing parameter type
		if (x=>3) { do{gauche} while(croisement()) }
                    ^